# osserver

./: .gitignore  CMakeLists.txt
src/kernel/: CMakeLists.txt
src/kernel/generic/dev/: keyboard.c
src/kernel/generic/std/: format.c  stdlib.c
src/kernel/generic/sys/: klog.c
src/kernel/generic/sys/acpi/: acpi.c
src/kernel/generic/sys/cpu/: detect.c  msr.asm
src/kernel/generic/sys/dev/: vga.c
src/kernel/generic/sys/interrupt/: exception.c  ioapic.c  lapic.c  pic.c
src/kernel/generic/sys/mem/: kmem.c  kmem_liballoc.c
src/kernel/generic/sys/ps2/: controller.c  keyboard.c  manager.c
src/kernel/generic/sys/time/: ktimer.c  pit.c
src/kernel/i386/pc/: boot.asm  boot.s  bootstrap.asm  egdt.h  flags.cmake  gdt.asm  gdt.c  idt.asm  idt.c  internals.h  kernel.c  linker.ld  paging.c  renderer.c
src/kernel/include/: log.h  multiboot.asm  multiboot.h  string.c  string.h
src/kernel/include/dev/: keyboard.h
src/kernel/include/graphics/: basic_color_enum.h  renderer.c  renderer.h  screen.c  screen.h  vga.c  vga.h
src/kernel/include/std/: format.h  stdlib.h
src/kernel/include/sys/: asm.h  gdt.h  kernel.h  klog.h  nmi.h  rtc.c  rtc.h
src/kernel/include/sys/acpi/: acpi.h
src/kernel/include/sys/cpu/: detect.h  msr.h
src/kernel/include/sys/dev/: vga.h
src/kernel/include/sys/interrupt/: exception.h  idt.h  ioapic.h  lapic.h  pic.h
src/kernel/include/sys/mem/: kmem.h  kmem_liballoc.h  paging.h
src/kernel/include/sys/ps2/: controller.h  keyboard.h  manager.h
src/kernel/include/sys/time/: ktimer.h  pit.h
src/libc/: CMakeLists.txt
src/libc/include/: stdio.h  stub.h
toolchain/: i386.cmake  x86_64.cmake
